src/test/deca/syntax/invalid/include_cycle_a.decah
#include "include_cycle_b.decah"